[package]
name = "nt1-billing-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
kafka = "0.10"
openssl = "0.10.64"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
prometheus_exporter = { version = "0.8", features = ["logging"] }
