[package]
name = "dcache-kafka-exporter"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11.3" }
kafka = "0.10"
log = { version = "0.4.21" }
openssl = "0.10.64"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
prometheus_exporter = { version = "0.8", features = ["logging"] }
